--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,13 +1,10 @@
 * {
-	/*font-family: 'Varela Round', sans-serif;*/
-	font-family: 'Crimson Text', serif;
-	font-family: 'Zilla Slab', serif;
-	font-family: 'Signika Negative', sans-serif;
+	/* font-family: 'Varela Round', sans-serif; */
+	font-family: 'Crimson Text', 
+	  serif;
+	font-family: 'Zilla Slab', 
+	  serif;
+	font-family: 'Signika Negative', 
+	  sans-serif;
 	font-size: 17px;
 }
-
-/*.chart-bar {
-  position: relative;
-  height: 15rem;
-  width: 100%;
-}*/
