--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,10 +1,7 @@
 * {
 	/* font-family: 'Varela Round', sans-serif; */
-	font-family: 'Crimson Text', 
-	  serif;
-	font-family: 'Zilla Slab', 
-	  serif;
-	font-family: 'Signika Negative', 
-	  sans-serif;
+	font-family: 'Crimson Text',  serif;
+	font-family: 'Zilla Slab',  serif;
+	font-family: 'Signika Negative',  sans-serif;
 	font-size: 17px;
 }
