--- a/assets/datatables/datatables.css
+++ b/assets/datatables/datatables.css
@@ -17,15 +17,18 @@ table.dataTable {
   max-width: none !important;
   border-collapse: separate !important;
 }
+
 table.dataTable td,
 table.dataTable th {
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
+
 table.dataTable td.dataTables_empty,
 table.dataTable th.dataTables_empty {
   text-align: center;
 }
+
 table.dataTable.nowrap th,
 table.dataTable.nowrap td {
   white-space: nowrap;
@@ -36,36 +39,44 @@ div.dataTables_wrapper div.dataTables_length label {
   text-align: left;
   white-space: nowrap;
 }
+
 div.dataTables_wrapper div.dataTables_length select {
   width: 75px;
   display: inline-block;
 }
+
 div.dataTables_wrapper div.dataTables_filter {
   text-align: right;
 }
+
 div.dataTables_wrapper div.dataTables_filter label {
   font-weight: normal;
   white-space: nowrap;
   text-align: left;
 }
+
 div.dataTables_wrapper div.dataTables_filter input {
   margin-left: 0.5em;
   display: inline-block;
   width: auto;
 }
+
 div.dataTables_wrapper div.dataTables_info {
   padding-top: 8px;
   white-space: nowrap;
 }
+
 div.dataTables_wrapper div.dataTables_paginate {
   margin: 0;
   white-space: nowrap;
   text-align: right;
 }
+
 div.dataTables_wrapper div.dataTables_paginate ul.pagination {
   margin: 2px 0;
   white-space: nowrap;
 }
+
 div.dataTables_wrapper div.dataTables_processing {
   position: absolute;
   top: 50%;
@@ -77,16 +88,20 @@ div.dataTables_wrapper div.dataTables_processing {
   padding: 1em 0;
 }
 
-table.dataTable thead > tr > th.sorting_asc, table.dataTable thead > tr > th.sorting_desc, table.dataTable thead > tr > th.sorting,
+table.dataTable thead > tr > th.sorting_asc, 
+table.dataTable thead > tr > th.sorting_desc, 
+table.dataTable thead > tr > th.sorting,
 table.dataTable thead > tr > td.sorting_asc,
 table.dataTable thead > tr > td.sorting_desc,
 table.dataTable thead > tr > td.sorting {
   padding-right: 30px;
 }
+
 table.dataTable thead > tr > th:active,
 table.dataTable thead > tr > td:active {
   outline: none;
 }
+
 table.dataTable thead .sorting,
 table.dataTable thead .sorting_asc,
 table.dataTable thead .sorting_desc,
@@ -95,6 +110,7 @@ table.dataTable thead .sorting_desc_disabled {
   cursor: pointer;
   position: relative;
 }
+
 table.dataTable thead .sorting:after,
 table.dataTable thead .sorting_asc:after,
 table.dataTable thead .sorting_desc:after,
@@ -107,19 +123,23 @@ table.dataTable thead .sorting_desc_disabled:after {
   font-family: 'Glyphicons Halflings';
   opacity: 0.5;
 }
+
 table.dataTable thead .sorting:after {
   opacity: 0.2;
   content: "\e150";
   /* sort */
 }
+
 table.dataTable thead .sorting_asc:after {
   content: "\e155";
   /* sort-by-attributes */
 }
+
 table.dataTable thead .sorting_desc:after {
   content: "\e156";
   /* sort-by-attributes-alt */
 }
+
 table.dataTable thead .sorting_asc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:after {
   color: #eee;
@@ -134,11 +154,13 @@ div.dataTables_scrollBody > table {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
 }
+
 div.dataTables_scrollBody > table > thead .sorting:after,
 div.dataTables_scrollBody > table > thead .sorting_asc:after,
 div.dataTables_scrollBody > table > thead .sorting_desc:after {
   display: none;
 }
+
 div.dataTables_scrollBody > table > tbody > tr:first-child > th,
 div.dataTables_scrollBody > table > tbody > tr:first-child > td {
   border-top: none;
@@ -147,6 +169,7 @@ div.dataTables_scrollBody > table > tbody > tr:first-child > td {
 div.dataTables_scrollFoot > .dataTables_scrollFootInner {
   box-sizing: content-box;
 }
+
 div.dataTables_scrollFoot > .dataTables_scrollFootInner > table {
   margin-top: 0 !important;
   border-top: none;
@@ -160,9 +183,11 @@ div.dataTables_scrollFoot > .dataTables_scrollFootInner > table {
     text-align: center;
   }
 }
+
 table.dataTable.table-condensed > thead > tr > th {
   padding-right: 20px;
 }
+
 table.dataTable.table-condensed .sorting:after,
 table.dataTable.table-condensed .sorting_asc:after,
 table.dataTable.table-condensed .sorting_desc:after {
@@ -174,11 +199,14 @@ table.table-bordered.dataTable th,
 table.table-bordered.dataTable td {
   border-left-width: 0;
 }
-table.table-bordered.dataTable th:last-child, table.table-bordered.dataTable th:last-child,
+
+table.table-bordered.dataTable th:last-child, 
+table.table-bordered.dataTable th:last-child,
 table.table-bordered.dataTable td:last-child,
 table.table-bordered.dataTable td:last-child {
   border-right-width: 0;
 }
+
 table.table-bordered.dataTable tbody th,
 table.table-bordered.dataTable tbody td {
   border-bottom-width: 0;
@@ -191,9 +219,11 @@ div.dataTables_scrollHead table.table-bordered {
 div.table-responsive > div.dataTables_wrapper > div.row {
   margin: 0;
 }
+
 div.table-responsive > div.dataTables_wrapper > div.row > div[class^="col-"]:first-child {
   padding-left: 0;
 }
+
 div.table-responsive > div.dataTables_wrapper > div.row > div[class^="col-"]:last-child {
   padding-right: 0;
 }
@@ -217,7 +247,9 @@ div.DTFC_RightBodyWrapper table {
   margin: 0 !important;
   z-index: 2;
 }
-div.DTFC_LeftBodyWrapper table thead .sorting:before, div.DTFC_LeftBodyWrapper table thead .sorting:after,
+
+div.DTFC_LeftBodyWrapper table thead .sorting:before, 
+div.DTFC_LeftBodyWrapper table thead .sorting:after,
 div.DTFC_LeftBodyWrapper table thead .sorting_asc:before,
 div.DTFC_LeftBodyWrapper table thead .sorting_asc:after,
 div.DTFC_LeftBodyWrapper table thead .sorting_desc:before,
@@ -242,6 +274,7 @@ div.DTFC_RightBodyWrapper table thead .sorting_desc:before,
 div.DTFC_RightBodyWrapper table thead .sorting_desc:after {
   display: none;
 }
+
 div.DTFC_LeftBodyWrapper table tbody tr:first-child th,
 div.DTFC_LeftBodyWrapper table tbody tr:first-child td,
 div.DTFC_RightBodyWrapper table tbody tr:first-child th,
@@ -266,17 +299,20 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > th.child,
 table.dataTable.dtr-inline.collapsed > tbody > tr > td.dataTables_empty {
   cursor: default !important;
 }
+
 table.dataTable.dtr-inline.collapsed > tbody > tr > td.child:before,
 table.dataTable.dtr-inline.collapsed > tbody > tr > th.child:before,
 table.dataTable.dtr-inline.collapsed > tbody > tr > td.dataTables_empty:before {
   display: none !important;
 }
+
 table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > td:first-child,
 table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > th:first-child {
   position: relative;
   padding-left: 30px;
   cursor: pointer;
 }
+
 table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > td:first-child:before,
 table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > th:first-child:before {
   top: 9px;
@@ -297,15 +333,18 @@ table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > th:first-child:b
   content: '+';
   background-color: #337ab7;
 }
+
 table.dataTable.dtr-inline.collapsed > tbody > tr.parent > td:first-child:before,
 table.dataTable.dtr-inline.collapsed > tbody > tr.parent > th:first-child:before {
   content: '-';
   background-color: #d33333;
 }
+
 table.dataTable.dtr-inline.collapsed.compact > tbody > tr > td:first-child,
 table.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child {
   padding-left: 27px;
 }
+
 table.dataTable.dtr-inline.collapsed.compact > tbody > tr > td:first-child:before,
 table.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child:before {
   top: 5px;
@@ -316,11 +355,13 @@ table.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child:befor
   line-height: 14px;
   text-indent: 3px;
 }
+
 table.dataTable.dtr-column > tbody > tr > td.control,
 table.dataTable.dtr-column > tbody > tr > th.control {
   position: relative;
   cursor: pointer;
 }
+
 table.dataTable.dtr-column > tbody > tr > td.control:before,
 table.dataTable.dtr-column > tbody > tr > th.control:before {
   top: 50%;
@@ -343,33 +384,41 @@ table.dataTable.dtr-column > tbody > tr > th.control:before {
   content: '+';
   background-color: #337ab7;
 }
+
 table.dataTable.dtr-column > tbody > tr.parent td.control:before,
 table.dataTable.dtr-column > tbody > tr.parent th.control:before {
   content: '-';
   background-color: #d33333;
 }
+
 table.dataTable > tbody > tr.child {
   padding: 0.5em 1em;
 }
+
 table.dataTable > tbody > tr.child:hover {
   background: transparent !important;
 }
+
 table.dataTable > tbody > tr.child ul.dtr-details {
   display: inline-block;
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
+
 table.dataTable > tbody > tr.child ul.dtr-details > li {
   border-bottom: 1px solid #efefef;
   padding: 0.5em 0;
 }
+
 table.dataTable > tbody > tr.child ul.dtr-details > li:first-child {
   padding-top: 0;
 }
+
 table.dataTable > tbody > tr.child ul.dtr-details > li:last-child {
   border-bottom: none;
 }
+
 table.dataTable > tbody > tr.child span.dtr-title {
   display: inline-block;
   min-width: 75px;
@@ -386,6 +435,7 @@ div.dtr-modal {
   z-index: 100;
   padding: 10em 1em;
 }
+
 div.dtr-modal div.dtr-modal-display {
   position: absolute;
   top: 0;
@@ -403,10 +453,12 @@ div.dtr-modal div.dtr-modal-display {
   border-radius: 0.5em;
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6);
 }
+
 div.dtr-modal div.dtr-modal-content {
   position: relative;
   padding: 1em;
 }
+
 div.dtr-modal div.dtr-modal-close {
   position: absolute;
   top: 6px;
@@ -420,9 +472,11 @@ div.dtr-modal div.dtr-modal-close {
   cursor: pointer;
   z-index: 12;
 }
+
 div.dtr-modal div.dtr-modal-close:hover {
   background-color: #eaeaea;
 }
+
 div.dtr-modal div.dtr-modal-background {
   position: fixed;
   top: 0;
@@ -438,6 +492,7 @@ div.dtr-modal div.dtr-modal-background {
     width: 95%;
   }
 }
+
 div.dtr-bs-modal table.table tr:first-child td {
   border-top: none;
 }
