--- a/assets/datatables/FixedColumns-3.3.0/css/fixedColumns.bootstrap4.css
+++ b/assets/datatables/FixedColumns-3.3.0/css/fixedColumns.bootstrap4.css
@@ -16,7 +16,9 @@ div.DTFC_RightBodyWrapper table {
   margin: 0 !important;
   z-index: 2;
 }
-div.DTFC_LeftBodyWrapper table thead .sorting:before, div.DTFC_LeftBodyWrapper table thead .sorting:after,
+
+div.DTFC_LeftBodyWrapper table thead .sorting:before,
+div.DTFC_LeftBodyWrapper table thead .sorting:after,
 div.DTFC_LeftBodyWrapper table thead .sorting_asc:before,
 div.DTFC_LeftBodyWrapper table thead .sorting_asc:after,
 div.DTFC_LeftBodyWrapper table thead .sorting_desc:before,
@@ -41,6 +43,7 @@ div.DTFC_RightBodyWrapper table thead .sorting_desc:before,
 div.DTFC_RightBodyWrapper table thead .sorting_desc:after {
   display: none;
 }
+
 div.DTFC_LeftBodyWrapper table tbody tr:first-child th,
 div.DTFC_LeftBodyWrapper table tbody tr:first-child td,
 div.DTFC_RightBodyWrapper table tbody tr:first-child th,
