--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,5 +3,4 @@
 	font-family: 'Crimson Text', serif;
 	font-family: 'Zilla Slab', serif;
 	font-family: 'Signika Negative', sans-serif;
-	font-size: 17px;
-}
+	font-size: 17px; }
